--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -20,7 +20,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace/dist/themes/dark.css">
 
-      <link rel="stylesheet" href="../styles/index.css" />
+      <link rel="stylesheet" href="../css/index.css" />
 </head>
 
   <body x-data="landing()">
