--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -121,5 +121,6 @@
 
   <footer class="footer"><div class="container"><small>© Mind Engine • Design Studio</small></div></footer>
     <script type="module" src="../scripts/main.js"></script>
-  </body>
+    <script type="module">import { ensureTheme } from "../scripts/theme-boot.js"; ensureTheme();</script>
+</body>
   </html>
