chore: normalize legacy pages (css/index.css, shoelace runtime, theme, scripts)

--- a/pages/dev-components.html
+++ b/pages/dev-components.html
@@ -37,5 +37,6 @@
         </div>
       </section>
     </main>
-  </body>
+    <script type="module" src="../scripts/main.js"></script>
+</body>
 </html>
