--- a/pages/_catalog.html
+++ b/pages/_catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Pages Catalog</title>
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <script type="module" src="../node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
     <style>
       .wrap { max-width: 960px; margin: 2rem auto; padding: 0 1rem; }
