--- a/pages/dashboard-flexjobs.html
+++ b/pages/dashboard-flexjobs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Dashboard • FlexJobs</title>
 
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../css/dashboard-flexjobs.css" />
     <script type="module" src="../node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
   </head>
