--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -15,7 +15,7 @@
 
       <link rel="icon" href="/favicon.ico" type="image/png" />    
 
-      <link rel="stylesheet" href="./" />
+    <link rel="stylesheet" href="../styles/index.css" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
       <link rel="stylesheet" href="../css/index.css" />
