--- a/pages/dev-components.html
+++ b/pages/dev-components.html
@@ -6,7 +6,7 @@
     <title>Components • Dev</title>
 
     <!-- Canonical stylesheet and Shoelace runtime -->
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <script type="module" src="../node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
 
     <!-- Alpine (CDN for quick dev; replace with local if you prefer) -->
