chore: snapshot before moving to styles/

--- a/pages/builder.html
+++ b/pages/builder.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Component Builder</title>
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <script type="module" src="../node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
     <style>
       /* Minimal layout sugar for the builder page */
