chore: use /scripts dashboard entry and wire page

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Dashboard</title>
+
+    <!-- Design system -->
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/dashboard.css" />
     <script type="module" src="../node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
@@ -20,6 +22,7 @@
       </main>
     </div>
 
-    <script type="module" src="../js/dashboard.app.js"></script>
+    <!-- App entry -->
+    <script type="module" src="../scripts/dashboard.js"></script>
   </body>
 </html>
