--- a/index.html
+++ b/index.html
@@ -118,6 +118,6 @@
   </sl-dialog>
 
   <footer class="footer"><div class="container"><small>© Mind Engine • Design Studio</small></div></footer>
-    <script type="module" src="../scripts/main.js"></script>
+  <script type="module" src="/scripts/main.js"></script>
   </body>
   </html>
